Fix vertical align

--- a/assets/css/kuzovova.css
+++ b/assets/css/kuzovova.css
@@ -21,7 +21,14 @@ body {
 }
 
 .addForm {
-	float: left;
+	display: table;
+	height: 100%;
+	width: 100%;
+}
+
+.addFormContent {
+	display: table-cell;
+	vertical-align: middle;
 }
 
 #nav {
@@ -39,7 +46,7 @@ body {
    border-color: transparent;
 }
 
-.navbar li { color: #000 } 
+.navbar li { color: #000 }
 
 
 
@@ -48,8 +55,8 @@ body {
 }
 
 .parent {
-        display:table;   
-        height:100%;    
+        display:table;
+        height:100%;
         display:table;table-layout:fixed;
 }
 
@@ -66,4 +73,4 @@ body {
 
  .col-lg-4 {
  	min-height: 85vh;
- } 
+ }
